syntax = "proto3";

option csharp_namespace = "SpikeGrpc";

package spikegrpc;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc Echo (stream EchoRequest) returns (stream EchoResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
